take a crack at stopping massive overflow on #locked stuff

--- a/style.css
+++ b/style.css
@@ -91,4 +91,5 @@ pre {
 
 #locked {
   visibility: hidden;
+  height: 0px;
 }
